# L1IR

./: .gitignore  Cargo.toml  Makefile  README.md
benches/: fibonacci.rs  flops.rs  main.ml  main.py  main.rs
benches/rust/: main.rs
src/: README.md  ast.rs  eval.rs  lib.rs  opt.rs  value.rs
src/recipes/: cranelift.rs  mod.rs
src/recipes/cranelift_impl/: add.rs  and.rs  cast_i64_as_u64.rs  cast_u64_as_i64.rs  cast_u64_as_string.rs  div.rs  eq.rs  gt.rs  gte.rs  lt.rs  lte.rs  mod.rs  mul.rs  ne.rs  not.rs  or.rs  range1.rs  range2.rs  range3.rs  rem.rs  std_println.rs  string_join1.rs  string_join2.rs  string_new.rs  string_push.rs  sub.rs  tuple_flatten.rs  tuple_index.rs  tuple_length.rs  tuple_new.rs  tuple_push.rs  tuple_trim.rs
tests/: a_debug.rs  a_eq.rs  a_eval.rs  a_types.rs  a_values.rs  b_jit1.rs  b_jit2.rs  b_opt1.rs  b_opt2.rs  b_opt3.rs  b_opt4.rs  b_stress.rs  d_bug_nested_flatmap.rs
