[package]
name = "l1_ir"
version = "0.0.22"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "L1 Intermediate Representation"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/L1IR"
keywords = ["compiler","interpreter","AST","IR","JIT"]

[dependencies]
num-traits = { version = "0.2" }
num-derive = { version = "0.2" }
num-bigint = { version = "0.4" }
cranelift = { version = "0.91", optional = true }
cranelift-module = { version = "0.91", optional = true }
cranelift-jit = { version = "0.91", optional = true }
regex = { version = "1" }

[features]
cranelift = ["dep:cranelift", "dep:cranelift-module", "dep:cranelift-jit"]

[[test]]
name = "b_opt1"
path = "tests/b_opt1.rs"
required-features = ["cranelift"]

[[test]]
name = "b_opt2"
path = "tests/b_opt2.rs"
required-features = ["cranelift"]

[[test]]
name = "b_jit1"
path = "tests/b_jit1.rs"
required-features = ["cranelift"]

[[bin]]
name = "bench"
path = "benches/main.rs"
required-features = ["cranelift"]

[[bin]]
name = "flops"
path = "benches/flops.rs"
required-features = ["cranelift"]
