[package]
name = "l1_ir"
version = "0.0.46"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT"
description = "L1 Intermediate Representation"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/L1IR"
keywords = ["compiler","interpreter","AST","IR","JIT"]

[dependencies]
num-traits = { version = "0.2" }
num-derive = { version = "0.2" }
num-bigint = { version = "0.4" }
cranelift = { version = "0.92" }
cranelift-module = { version = "0.92" }
cranelift-jit = { version = "0.92" }
cranelift-codegen = { version = "0.92" }
cranelift-native = { version = "0.92" }
regex = { version = "1" }
